--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+*{
+    font-family: "Proxima Nova",-apple-system,Roboto,Arial,sans-serif,sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(17, 17, 17);
+}
+
